--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
 	"name": "fcc-api-projects-boilerplate",
 	"version": "0.0.1",
 	"description": "An FCC Backend Challenge",
+	"engines": {
+		"node": "14.x"
+	},
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.12.4",
-		"cors": "^2.8.0"
+		"cors": "^2.8.0",
+		"ejs": "^3.1.5",
+		"express": "^4.15.2"
+	},
+	"devDependencies": {
+		"got": "^11.3.0",
+		"tape": "^4.7.0"
 	},
 	"repository": {
 		"type": "git",
@@ -16,6 +24,7 @@
 	},
 	"keywords": [
 		"node",
+		"heroku",
 		"hyperdev",
 		"express",
 		"freecodecamp"
