--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://githost.com/camper/repo.git"
+		"url": "https://github.com/kaviraj121/freecodecamp-api-and-microservices-projects"
 	},
 	"keywords": [
 		"node",
