--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
 	"name": "fcc-api-projects-boilerplate",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"description": "An FCC Backend Challenge",
-	"engines": {
-		"node": "14.x"
-	},
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
 		"cors": "^2.8.0",
-		"ejs": "^3.1.5",
-		"express": "^4.15.2"
+		"express": "^4.12.4"
 	},
-	"devDependencies": {
-		"got": "^11.3.0",
-		"tape": "^4.7.0"
+	"engines": {
+		"node": "14.x"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/kaviraj121/freecodecamp-api-and-microservices-projects"
+		"url": "https://githost.com/camper/repo.git"
 	},
 	"keywords": [
 		"node",
