--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"cors": "^2.8.0",
-		"express": "^4.12.4"
+		"dotenv": "^8.2.0",
+		"express": "^4.12.4",
+		"mongodb": "^3.6.4",
+		"mongoose": "^5.11.15",
+		"shortid": "^2.2.16"
 	},
 	"engines": {
 		"node": "14.x"
